--- a/src/main/resources/localization/en-GB.json
+++ b/src/main/resources/localization/en-GB.json
@@ -40,6 +40,29 @@
   "kick.success": "Пользователь был успешно кикнут с этого сервера!",
 
   "================================================================================": "",
+  "mute.help": "Заткнуть пользователя.",
+
+  "mute.options.user.description": "Пользователь, которого нужно заткнуть.",
+  "mute.options.durationTime.description": "Численное значение времени, на которое нужно заткнуть пользователя.",
+  "mute.options.durationUnit.description": "Единица времени, на которое нужно заткнуть пользователя.",
+  "mute.options.reason.description": "Причина, по которой нужно заткнуть пользователя.",
+
+  "mute.choices.seconds.name": "Секунды",
+  "mute.choices.minutes.name": "Минуты",
+  "mute.choices.hours.name": "Часы",
+  "mute.choices.days.name": "Дни",
+
+  "mute.error.self-purge": "Вы не можете заткнуть сами себя!",
+  "mute.error.bot-purge": "Вы не можете заткнуть меня!",
+  "mute.error.owner-purge": "Вы не можете заткнуть владельца сервера!",
+  "mute.error.cant-interact": "Я не могу взаимодействовать с этим пользователем!",
+  "mute.error.user-not-found": "Пользователь не найден на этом сервере!",
+  "mute.error.missing-permissions": "У меня нет права отправлять участников подумать о своем поведении!",
+  "mute.error.unknown": "По неизвестной мне причине я не могу заткнуть этого пользователя!",
+
+  "mute.success": "Пользователь был успешно заткнут!",
+
+  "================================================================================": "",
   "info.help": "Общая информация о KNTBot.",
 
   "info.bot.description": "KNTBot - это бот, предназначенный помогать администрации серверов в модерации и оформлении каналов.",
