--- a/src/main/resources/localization/ru.json
+++ b/src/main/resources/localization/ru.json
@@ -58,9 +58,37 @@
   "mute.error.cant-interact": "Я не могу взаимодействовать с этим пользователем!",
   "mute.error.user-not-found": "Пользователь не найден на этом сервере!",
   "mute.error.missing-permissions": "У меня нет права отправлять участников подумать о своем поведении!",
+  "mute.error.durationLimit": "Максимальная длительность затычки составляет 14 дней!",
   "mute.error.unknown": "По неизвестной мне причине я не могу заткнуть этого пользователя!",
 
   "mute.success": "Пользователь был успешно заткнут!",
+
+  "================================================================================": "",
+  "unmute.help": "Снять заглушку с пользователя",
+
+  "unmute.options.user.description": "Пользователь, с которого нужно снять заглушку.",
+
+  "unmute.error.self-unmute": "Вы не можете снять сами с себя заглушку!",
+  "unmute.error.cant-interact": "Я не могу взаимодействовать с этим пользователем!",
+  "unmute.error.user-not-found": "Пользователь не найден на этом сервере!",
+  "unmute.error.missing-permissions": "У меня нет права отправлять участников подумать о своем поведении!",
+  "unmute.error.unknown": "По неизвестной мне причине я не могу снять заглушку с этого пользователя!",
+
+  "unmute.success": "С пользователя была успешно снята заглушка.",
+
+  "================================================================================": "",
+  "unban.help": "Разблокировать пользователя на сервере",
+
+  "unban.options.user.description": "Пользователь, которого нужно разблокировать",
+
+  "unban.autocomplete.error.missing-permissions": "У меня нет прав на просмотр списка блокировок!",
+
+  "unban.error.no-banned": "Пользователь не заблокирован!",
+  "unban.error.no-bans": "Блокировок не обнаружено!",
+  "unban.error.unknown": "По неизвестной мне причине я не могу разблокировать данного участника",
+
+  "unban.success": "Пользователь был успешно разблокирован!",
+  "unban.success.reason-was": "Причина блокировки была:",
 
   "================================================================================": "",
   "info.help": "Общая информация о KNTBot.",
